# libMsC

./: CMakeLists.txt  README.md  cmd-utils.h  contributors.txt  dataset_management.h  debug_stream.h  errors_evaluation.h  liblinear-learn.cpp  libsvm-learn.cpp  parfor.h  roc.cpp  roc.h  thread_manager.h
